Added Score saving and high scores

--- a/spaceXplorer/CMakeLists.txt
+++ b/spaceXplorer/CMakeLists.txt
@@ -11,4 +11,6 @@ add_executable(spaceXplorer main.c
         entity.h
         input.h
         title.c
-        title.h)
+        title.h
+        scores.c
+        scores.h)
